change to bootstrap3

--- a/templates/bootstrap/common/sidebar.html
+++ b/templates/bootstrap/common/sidebar.html
@@ -1,7 +1,7 @@
 {{define "sidebar"}}
 <div class="well sidebar-nav">
-	<ul class="nav nav-list">
-		<li class="nav-header">Tags</li>
+	<ul class="nav">
+		<li >Tags</li>
 		{{range $index, $element := .Tags}}
 		<li><a href="/blog/tag/{{$index}}">{{$index}}({{$element}})</a></li>
 		{{end}}
