--- a/templates/bootstrap/common/header.html
+++ b/templates/bootstrap/common/header.html
@@ -10,14 +10,14 @@
 		<meta name="google-site-verification" content="l3Y8n6zo-FFF6F0wPDpXZEZs7zqmxykP1aNeZxT22Zg" />
 		<!-- Bootstrap -->
 		<link href="/themes/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+		
 		<style type="text/css">
+		
       	body {
        		padding-top: 60px;
         	padding-bottom: 40px;
       	}
-      	.sidebar-nav {
-        	padding: 9px 0;
-     	}
+      	
      	@media (max-width: 980px) {
      		/* Enable use of floated navbar text */
      		.navbar-text.pull-right {
@@ -26,43 +26,38 @@
      			padding-right: 5px;
      		}
      	}
+     	
     	</style>
-		<link href="/themes/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    	
+		<link href="/themes/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
     	<!-- Place this tag in your head or just before your close body tag. -->
 		<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
 
 	</head>
 	<body>
-		<div class="navbar navbar-inverse navbar-fixed-top">
-	      <div class="navbar-inner">
-	        <div class="container-fluid">
-	          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-	            <span class="icon-bar"></span>
-	            <span class="icon-bar"></span>
-	            <span class="icon-bar"></span>
-	          </a>
-	          <a class="brand" href="/">{{.args.brandName}}</a>
-	          <div class="nav-collapse collapse">
-	            <p class="navbar-text pull-right">
-	            <!--
-	              Logged in as <a href="#" class="navbar-link">Username</a> 
-	          	-->
-	            </p>
-	            <ul class="nav">
-	              <li class="active"><a href="/"> Home</a></li>
-	              <li ><a href="http://sosimilar.wendyeq.me">Sosimilar</a></li>
-	              <li ><a href="https://github.com/wendyeq">Github</a></li>
-	              {{if .args.isListComments}}
-	              <li><a href="/admin/comment">Comments</a></li>
-	              {{end}}
-	              <!--
-	              <li><a href="/about">About</a></li>
-	              <li><a href="/contact">Contact</a></li>
-	          -->
-	            </ul>
-	          </div><!--/.nav-collapse -->
-	        </div>
-	      </div>
-	    </div><!-- navbar -->
+		<div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+      		<div class="container">
+		        <div class="navbar-header">
+		          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		          </button>
+		          <a class="navbar-brand" href="/">{{.args.brandName}}</a>
+		        </div>
+		        <div class="collapse navbar-collapse">
+		          <ul class="nav navbar-nav">
+		            <li class="active"><a href="/">Home</a></li>
+		            
+		            <li ><a href="http://sosimilar.wendyeq.me">Sosimilar</a></li>
+			        <li ><a href="https://github.com/wendyeq">Github</a></li>
+			        {{if .args.isListComments}}
+			        <li><a href="/admin/comment">Comments</a></li>
+			        {{end}}
+		          </ul>
+		        </div><!-- /.nav-collapse -->
+		    </div><!-- /.container -->
+    	</div><!-- /.navbar -->
+
 
 {{end}}
