--- a/templates/bootstrap/edit.html
+++ b/templates/bootstrap/edit.html
@@ -1,91 +1,126 @@
-<!DOCTYPE html>
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Wendyeq</title>
+		<title>Edit Article</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		
 		<!-- Bootstrap -->
 		<link href="/themes/bootstrap/css/bootstrap.min.css" rel="stylesheet" media="screen">
+		
 		<style type="text/css">
-		body {
-			padding-top: 60px;
-			padding-bottom: 40px;
-		}
-		</style>
+		
+      	body {
+       		padding-top: 60px;
+        	padding-bottom: 40px;
+      	}
+      	
+     	@media (max-width: 980px) {
+     		/* Enable use of floated navbar text */
+     		.navbar-text.pull-right {
+     			float: none;
+     			padding-left: 5px;
+     			padding-right: 5px;
+     		}
+     	}
+     	
+    	</style>
+    	
+		<link href="/themes/bootstrap/css/bootstrap-theme.min.css" rel="stylesheet">
 
 	</head>
 	<body>
-		<div class="navbar navbar-inverse navbar-fixed-top">
-	      <div class="navbar-inner">
-	        <div class="container-fluid">
-	          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-	            <span class="icon-bar"></span>
-	            <span class="icon-bar"></span>
-	            <span class="icon-bar"></span>
-	          </a>
-	          <a class="brand" href="/">Wendyeq</a>
-	          <div class="nav-collapse collapse">
-	            <p class="navbar-text pull-right">
-	            <!--
-	              Logged in as <a href="#" class="navbar-link">Username</a> 
-	          	-->
-	            </p>
-	            <ul class="nav">
-	              <li class="active"><a href="/">Home</a></li>
-	              <!--
-	              <li><a href="#about">About</a></li>
-	              <li><a href="#contact">Contact</a></li>
-	          -->
-	            </ul>
-	          </div><!--/.nav-collapse -->
-	        </div>
-	      </div>
-	    </div>
+		<div class="navbar navbar-fixed-top navbar-inverse" role="navigation">
+      		<div class="container">
+		        <div class="navbar-header">
+		          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		            <span class="icon-bar"></span>
+		          </button>
+		          <a class="navbar-brand" href="/">Wendyeq</a>
+		        </div>
+		        <div class="collapse navbar-collapse">
+		          <ul class="nav navbar-nav">
+		            <li class="active"><a href="/">Home</a></li>
+		            
+		            <li ><a href="http://sosimilar.wendyeq.me">Sosimilar</a></li>
+			        <li ><a href="https://github.com/wendyeq">Github</a></li>
+		          </ul>
+		        </div><!-- /.nav-collapse -->
+		    </div><!-- /.container -->
+    	</div><!-- /.navbar -->
 
 	    <div class="container">
 	    	{{with .}}
-	    	<form method="post" autocomplete="on" action="/admin/article/post" name ="form1" > 
+	    	<form class="form-horizontal" role="form" method="post" autocomplete="on" action="/admin/article/post" name ="form1" > 
 				<input type="hidden" name="id" value="{{.Id}}">
 
-	    		<div class="controls">
-	    			<label>标题：</label>
-	    			<span class="input-large uneditable-input">{{.Title}}</span>
-	    		</div>
-	    		<div class="controls">
-	    			<label>标签：</label>
-	    			<input type="text" name="tags" value="{{range $tag := .Tags}}{{$tag}} {{end}}">
-	    		</div>
-	    		<div class="controls">
-	    			<textarea rows="4" name="summary" class="span5">{{.Summary}}</textarea>
-	    		</div>
-	    		<div class="controls">
-	    			<textarea rows="8" name="content" class="span8" >{{.Content | printf "%s"}}</textarea>
-	    		</div>
-	    		<div class="controls">
-	    			<input class="btn" type="button" value="preview" onclick=preview()></input>
-	    			<input class="btn" type="button" value="提交" onclick=update()></input>
+	    		<div class="form-group">
+   					<label for="title" class="col-lg-2 control-label">标题</label>
+    				<div class="col-lg-8">
+      					<input type="text" class="form-control" id="title" name="title" value="{{.Title}}">
+    				</div>
+  				</div>
+	    		<div class="form-group">
+   					<label for="tags" class="col-lg-2 control-label">标签</label>
+    				<div class="col-lg-8">
+      					<input type="text" class="form-control" id="tags" name="tags" value="{{range $tag := .Tags}}{{$tag}} {{end}}" >
+    				</div>
+  				</div>
+				<div class="form-group">
+   					<label for="summary" class="col-lg-2 control-label">摘要</label>
+    				<div class="col-lg-8">
+    					<textarea class="form-control" rows="4" id="summary" name="summary" >{{.Summary}}</textarea>
+    				</div>
+  				</div>
+  				<div class="form-group">
+   					<label for="content" class="col-lg-2 control-label">内容</label>
+    				<div class="col-lg-8">
+    					<textarea class="form-control" rows="8" id="content" name="content" >{{.Content | printf "%s"}}</textarea>
+    				</div>
+  				</div>
+	    		
+	    		<div class="form-group">
+	    			<label for="content" class="col-lg-2 control-label"></label>
+    				<div class="col-lg-8">
+	    				<input class="btn btn-info" type="button" value="preview" onclick=preview()></input>
+	    				<input class="btn btn-primary" type="button" value="提交" onclick=save()></input>
+	    			</div>
 	    		</div>
 	    	</form>
 	    	{{else}}
-			<form method="post" autocomplete="on" action="/admin/article/post" name ="form1" > 
-
-	    		<div class="controls">
-	    			<label>标题：</label>
-	    			<input type="text" name="title" required>
-	    		</div>
-	    		<div class="controls">
-	    			<label>标签：</label>
-	    			<input type="text" name="tags">
-	    		</div>
-	    		<div class="controls">
-	    			<textarea rows="4" name="summary" class="span5"></textarea>
-	    		</div>
-	    		<div class="controls">
-	    			<textarea rows="8" name="content" class="span8" ></textarea>
-	    		</div>
-	    		<div class="controls">
-	    			<input class="btn" type="button" value="preview" onclick=preview()></input>
-	    			<input class="btn" type="button" value="提交" onclick=save()></input>
+			<form class="form-horizontal" role="form" method="post" autocomplete="on" action="/admin/article/post" name ="form1" > 
+				<div class="form-group">
+   					<label for="title" class="col-lg-2 control-label">标题</label>
+    				<div class="col-lg-8">
+      					<input type="text" class="form-control" id="title" name="title" placeholder="title" required>
+    				</div>
+  				</div>
+	    		<div class="form-group">
+   					<label for="tags" class="col-lg-2 control-label">标签</label>
+    				<div class="col-lg-8">
+      					<input type="text" class="form-control" id="tags" name="tags" placeholder="tags" >
+    				</div>
+  				</div>
+				<div class="form-group">
+   					<label for="summary" class="col-lg-2 control-label">摘要</label>
+    				<div class="col-lg-8">
+    					<textarea class="form-control" rows="4" id="summary" name="summary" ></textarea>
+    				</div>
+  				</div>
+  				<div class="form-group">
+   					<label for="content" class="col-lg-2 control-label">内容</label>
+    				<div class="col-lg-8">
+    					<textarea class="form-control" rows="8" id="content" name="content" ></textarea>
+    				</div>
+  				</div>
+	    		
+	    		<div class="form-group">
+	    			<label for="content" class="col-lg-2 control-label"></label>
+    				<div class="col-lg-8">
+	    				<input class="btn btn-info" type="button" value="preview" onclick=preview()></input>
+	    				<input class="btn btn-primary" type="button" value="提交" onclick=save()></input>
+	    			</div>
 	    		</div>
 	    	</form>
 	    	{{end}}
