--- a/templates/bootstrap/common/footer.html
+++ b/templates/bootstrap/common/footer.html
@@ -1,13 +1,15 @@
 {{define "footer"}}
 			<hr>
 			<footer >
-				<p class="muted credit">&copy; 2012  Wendyeq  CostTime : {{.args.costtime}}</p>
+				<p class="muted credit">&copy; 2012~2013  Wendyeq  CostTime : {{.args.costtime}}</p>
 			</footer>
 		</div> <!-- end container -->
 
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 		<script src="/themes/bootstrap/js/bootstrap.min.js"></script>
-
+		<!-- Place this tag in your head or just before your close body tag. 
+		<script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script>
+		-->
 		<script type="text/javascript">
 
 		var _gaq = _gaq || [];
