--- a/templates/bootstrap/view.html
+++ b/templates/bootstrap/view.html
@@ -3,8 +3,8 @@
 		{{$article := .article}}
 	    	{{$a := $article.MetaData}}
 	    <div class="container">
-	    	<!-- Place this tag where you want the +1 button to render. -->
-	    	<h1>{{$a.Title |html}} <div class="g-plusone"></div></h1>
+	    	
+	    	<h1>{{$a.Title |html}} </h1>
 
 	    	<div class="meta">
 	    		
