--- a/templates/bootstrap/edit.html
+++ b/templates/bootstrap/edit.html
@@ -52,13 +52,13 @@
 
 	    <div class="container">
 	    	{{with .}}
-	    	<form class="form-horizontal" role="form" method="post" autocomplete="on" action="/admin/article/post" name ="form1" > 
+	    	<form class="form-horizontal" role="form" method="post" autocomplete="on" action="/admin/article/update" name ="form1" > 
 				<input type="hidden" name="id" value="{{.Id}}">
 
 	    		<div class="form-group">
    					<label for="title" class="col-lg-2 control-label">标题</label>
     				<div class="col-lg-8">
-      					<input type="text" class="form-control" id="title" name="title" value="{{.Title}}">
+      					<input type="text" class="form-control" id="title" name="title" value="{{.Title}}" disabled>
     				</div>
   				</div>
 	    		<div class="form-group">
@@ -84,7 +84,7 @@
 	    			<label for="content" class="col-lg-2 control-label"></label>
     				<div class="col-lg-8">
 	    				<input class="btn btn-info" type="button" value="preview" onclick=preview()></input>
-	    				<input class="btn btn-primary" type="button" value="提交" onclick=save()></input>
+	    				<input class="btn btn-primary" type="button" value="提交" onclick=update()></input>
 	    			</div>
 	    		</div>
 	    	</form>
