--- a/templates/bootstrap/common/sidebar.html
+++ b/templates/bootstrap/common/sidebar.html
@@ -10,12 +10,17 @@
 		<li><a href="/blog/archive/{{$index.Replace "-" "/" -1}}">{{$index}}({{$element}})</a></li>
 		{{end}}
 
+		<li class="nav-header">AD</li>
+		<li><a target="_blank" href="http://www.amazon.cn/gp/feature.html/?ie=UTF8&camp=536&creative=3132&docId=126758&linkCode=ur2&pf_rd_i=116169071&pf_rd_m=A1AJ19PSB66TGU&pf_rd_p=70106812&pf_rd_r=07150S8RCW0WH3RMEXQW&pf_rd_s=right-top&pf_rd_t=101&tag=wendyeq-23">Kindle每天特价书</a><img src="https://ir-cn.amazon-adsystem.com/e/ir?t=wendyeq-23&l=ur2&o=28" width="1" height="1" border="0" alt="" style="border:none !important; margin:0px !important;" /></li>
+		<li><a href="http://www.mrrebates.com?refid=707528">Mr. Rebates</a></li>
+		
 		<li class="nav-header">Meta</li>
 		<li><a href="/release">Release Notes</a></li>
 		<li><a href="/sitemap">Sitemap</a></li>
 		<li><a href="/feed">RSS</a></li>
 		<li class="divider"></li>
 		<li><img src="/themes/bootstrap/img/email.png" alt="wendyeq#gmail.com" ></li>
+		
 		<!--
 		<li class="divider"></li>
 		<li>
